added additional fields to applications model
