# routes/applications.js
@@ -3,7 +3,7 @@ const { getPool } = require('../db');
 const pool = getPool();
 const { verifyRole } = require("../middleware/authorization");
 const { ROLE_NAMES } = require("../utils")
-const { respondWithError, isUniqueConstraintViolation } = require("./helpers")
+const { respondWithError, isUniqueConstraintViolation, isNotNullConstraintViolation } = require("./helpers")
 const router = express.Router();
 router.use(express.json());
 
@@ -18,20 +18,21 @@ router.get("/applications", verifyRole(ROLE_NAMES.mentor), async (req, res) => {
 });
 
 router.post("/applications", async (req, res) => {
-    const { name, about, email } = req.body;
+    const { name, about, email, video_link, discord_nickname } = req.body;
     try {
         const result = await pool.query(
-            "INSERT INTO applications (name, about, email) VALUES ($1, $2, $3) RETURNING *",
-            [name, about, email]
+            "INSERT INTO applications (name, about, email, video_link, discord_nickname) VALUES ($1, $2, $3, $4, $5) RETURNING *",
+            [name, about, email, video_link, discord_nickname]
         );
         res.status(201).json(result.rows[0]);
     } catch (err) {
         console.error(err);
         if (isUniqueConstraintViolation(err.code)) {
-            respondWithError(res, 409, "Application with this email already exists")
-        } else {
-            respondWithError(res);
+            return respondWithError(res, 409, "Application with this email already exists")
+        } else if (isNotNullConstraintViolation(err.code)) {
+            return respondWithError(res, 400, err.message)
         }
+        respondWithError(res);
     }
 });
 
